--- a/config/php-fpm/Dockerfile
+++ b/config/php-fpm/Dockerfile
@@ -8,6 +8,9 @@ RUN apt-get update && curl -sS https://getcomposer.org/installer | php -- --inst
 
 RUN docker-php-ext-install bcmath
 
+RUN yes | pecl install xdebug \
+    && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini
+
 WORKDIR /var/www
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
