--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "php-amqplib/php-amqplib": "^2.6",
         "ext-bcmath": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^6.0.7"
+    },
     "autoload": {
         "psr-4": {
             "Training\\": "src/"
